--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^14.3.2",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0"
   }
